# cmakeProblem

1/lib/: CMakeLists.txt  operations.cpp
1/src/: CMakeLists.txt  main.cpp
STRUCTURE LIBRARY/1/: CMakeLists.txt
STRUCTURE LIBRARY/1/lib/: CMakeLists.txt
STRUCTURE LIBRARY/1/src/: CMakeLists.txt
STRUCTURE LIBRARY/cmake/: README.md
